tests/expectations/parser/functions/return_type_empty_vector_fail.out
Error [EPAR0370009]: unexpected string: expected '[]', found 'element type'
    --> test:1:11
     |
   1 | fn f() -> [] {}
     |           ^^
Error [EPAR0370027]: Missing a program scope in a Leo file.
    --> test:1:1
     |
   1 | fn f() -> [] {}
     | ^^^^^^^^^^^^^^^
     |
     = Add a program scope of the form: `program <name>.aleo { ... }` to the Leo file.
